--- a/bluda.html
+++ b/bluda.html
@@ -61,9 +61,9 @@
             <li><a href="https://www.russianfood.com/recipes/recipe.php?rid=144020">Картофельные зразы с куриным фаршем</a></li>
             <li><a href="https://www.russianfood.com/recipes/recipe.php?rid=166763">Картофельные зразы с яйцом и зелёным луком</a></li>
             <li><a href="https://www.russianfood.com/recipes/recipe.php?rid=130070">Зразы картофельные с грибами</a></li>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
+            <li><a href="https://www.russianfood.com/recipes/recipe.php?rid=166471">Спагетти с сосисками и сыром в томатном соусе (в духовке)</a></li>
+            <li><a href="https://www.russianfood.com/recipes/recipe.php?rid=166305">Картофель, запечённый с сайрой</a></li>
+            <li><a href="https://www.russianfood.com/recipes/recipe.php?rid=151341">Свинина с овощами в духовке</a></li>
             <li><a href=""></a></li>
             <li><a href=""></a></li>
             <li><a href=""></a></li>
