--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
     <title>Рандомное блюдо на ужин</title>
 </head>
 <body>
+    <div class="background">
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+     </div>
     <div class="header">
         <div class="container">
             <h1 class="header__title">Рандомайзер случайного блюда</h1>
@@ -25,7 +35,12 @@
                 <li>Выйдет уведомление с вашим случайным числом,нажать"ок"</li>
                 <li>Перейте по ссылке и найти номер который вам выдал рандомайзер</li>
         </ol>
-            <button id="random" onClick="return getRandonNumber();">Выбрать случайное блюдо</button>
+            <button id="random" onClick="return getRandonNumber();">Выбрать случайное блюдо
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
             <a href="bluda.html" class="bluda">Нажми сюда и найди блюдо под своим номером!</a>
         </div>
     </div>
